# iptables-dashboard

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSES.md  rust-toolchain.toml
.github/workflows/: docker-build.yml  refresh-locks.yml  release.yml
crates/ipt-core/: Cargo.toml
crates/ipt-core/src/: diff.rs  guard.rs  lib.rs  model.rs  parser.rs  render.rs
crates/ipt-core/tests/: round_trip.rs
crates/ipt-core/tests/fixtures/: v4_typical_server.save  v6_typical_server.save
crates/ipt-executor/: Cargo.toml
crates/ipt-executor/src/: executor.rs  lib.rs  local.rs
crates/ipt-web/: Cargo.toml
crates/ipt-web/src/: app.rs  assets.rs  auth.rs  config.rs  error.rs  main.rs  state.rs  stats.rs  templates_builtin.rs
crates/ipt-web/src/api/: apply.rs  auth.rs  chains.rs  config.rs  logs.rs  mod.rs  rules.rs  snapshots.rs  stats.rs  templates.rs
crates/ipt-web/src/db/: mod.rs  pool.rs
crates/ipt-web/src/db/migrations/: 0001_init.sql  0002_user_must_change_password.sql  0003_audit_ip_ua.sql
crates/ipt-web/src/db/repo/: audit.rs  login_attempts.rs  mod.rs  pending.rs  snapshots.rs  templates.rs  users.rs
crates/ipt-web/src/safety/: mod.rs  snapshot.rs  two_phase.rs
crates/ipt-web/static/: .placeholder  index.html
deploy/systemd/: iptables-dashboard.service
design/demos/: 01-terminal-console.html  02-brutalist-sysadmin.html  03-refined-editorial.html  04-hud-scifi-fui.html  05-swiss-modernism.html  06-warm-light-stripe.html  index.html
docker/: Dockerfile  Dockerfile.allinone  config.example.toml  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh
docs/: architecture.md  security.md
frontend/: components.json  eslint.config.js  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: main.tsx  router.tsx
frontend/src/api/: apply.ts  queries.ts
frontend/src/components/: ErrorBoundary.tsx  QueryBoundary.tsx
frontend/src/components/layout/: AppShell.tsx
frontend/src/components/react-bits/: AuroraBackground.tsx  CountdownRing.tsx  GradientText.tsx
frontend/src/components/rules/: ChangePreview.tsx  FamilySwitcher.tsx  ICMPv6GuardBanner.tsx  RuleEditDialog.tsx  RuleImportDialog.tsx  RuleTable.tsx  SyncBadge.tsx  TwoStepConfirmModal.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Dialog.tsx  DropdownMenu.tsx  Input.tsx  Table.tsx  Tooltip.tsx
frontend/src/hooks/: useIdleTimeout.ts  useKeyboardShortcuts.ts
frontend/src/lib/: api.ts  theme.ts  useEventSource.ts  utils.ts
frontend/src/lib/__tests__/: utils.test.ts
frontend/src/pages/: AuditPage.tsx  DashboardPage.tsx  DiffPage.tsx  LoginPage.tsx  LogsPage.tsx  RulesPage.tsx  SettingsPage.tsx  SnapshotsPage.tsx  TemplatesPage.tsx
frontend/src/store/: ui.ts
frontend/src/styles/: animations.css  design-tokens.css  globals.css
frontend/src/types/: api.ts
