[workspace]
resolver = "2"
members = [
    "crates/ipt-core",
    "crates/ipt-executor",
    "crates/ipt-web",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = "MIT"
repository = "https://github.com/domoxiaojun/iptables-dashboard"
authors = ["iptables-dashboard contributors"]

[workspace.dependencies]
ipt-core = { path = "crates/ipt-core" }
ipt-executor = { path = "crates/ipt-executor" }

tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.11"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
