[package]
name = "ipt-executor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ipt-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
