[package]
name = "ipt-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "iptables-dashboard"
path = "src/main.rs"

[dependencies]
ipt-core = { workspace = true }
ipt-executor = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-br", "compression-gzip", "fs"] }
tower-sessions = { version = "0.14" }
tower-sessions-sqlx-store = { version = "0.15", features = ["sqlite"] }
axum-login = "0.17"
password-auth = "1.0"

sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono", "uuid", "migrate"] }
# Force the bundled libsqlite3-sys so the resulting binary has no system libsqlite3 dependency
# (important for the static-musl single-binary distribution).
libsqlite3-sys = { version = "0.30", features = ["bundled"] }

rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2.0"

figment = { version = "0.10", features = ["toml", "env"] }

futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

once_cell = "1.20"
rand = "0.8"
ipnet = "2.10"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "cookies"] }
tower = { version = "0.5", features = ["util"] }
tempfile = "3.13"
